--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Alexis MP "alexis.mp@gmail.com"
 RUN yum check-update
 
 # install Java 7
-RUN su -c "yum install java-1.7.0-openjdk-devel"
+RUN su -c "yum --assumeyes install java-1.7.0-openjdk-devel"
 
 # set a bunch of environment variables
 #ENV JAVA_HOME /usr/lib/jvm/java-7-openjdk-amd64/
